[package]
name = "easydev"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Janeczko"]
license = "MIT"
homepage = ""
repository = "https://github.com/dyanechi/easydev-rs"

[dependencies]
builder = { version = "0.1.0", path = "crates/builder", optional = true }


[features]
builder = ["dep:builder"]