[package]
name = "easydev"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Janeczko"]
keywords = [""]
categories = [""]
description = ""
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/dyanechi/easydev-rs"

[workspace]
members = ["crates/*"]

[dependencies]
builder = { version = "0.1.0", path = "crates/builder", optional = true }


[features]
builder = ["dep:builder"]